--- a/templates/finance_report.html
+++ b/templates/finance_report.html
@@ -32,7 +32,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        {% include 'header.html' %}
+        {% include 'header_alk.html' %}
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
